@@ -1,0 +1,1 @@
+utils::globalVariables(c("AICcWt", "Delta_AICc", "ValidModels", "color", "group", "level", "p10", "p11", "p20", "p21", "z"))
